--- a/src/pages/booze/booze.html
+++ b/src/pages/booze/booze.html
@@ -7,5 +7,13 @@
 </ion-header>
 
 <ion-content padding>
+<h2>What booze we got?</h2>
+<p>
+  Too much.
+</p>
 
 </ion-content>
+
+<ion-footer>
+  <button ion-button block>Add Booze</button>
+</ion-footer>
