--- a/src/pages/notes/notes.html
+++ b/src/pages/notes/notes.html
@@ -1,17 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Notes
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+<ion-content padding>
+<h2>Like passing notes in school, but nerdier</h2>
+<p>
+  Boud has been fed.
+</p>
+
 </ion-content>
