Added list and basic form

--- a/src/pages/addbooze/addbooze.html
+++ b/src/pages/addbooze/addbooze.html
@@ -7,10 +7,18 @@
 </ion-header>
 
 <ion-content padding>
-<h2>What booze we got?</h2>
-<p>
-  Too much.
-</p>
+<h2>Add new booze</h2>
+
+<form>
+  <ion-item>
+    <ion-label floating>Type</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label floating>Name</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+</form>
 
 </ion-content>
 
