--- a/src/pages/booze/booze.html
+++ b/src/pages/booze/booze.html
@@ -12,8 +12,14 @@
   Too much.
 </p>
 
+<ion-list>
+  <button ion-item *ngFor="let item of types" (click)="typeSelected(type)">
+    {{ type }}
+  </button>  
+</ion-list>
+
 </ion-content>
 
 <ion-footer>
-  <button ion-button block>Add Booze</button>
+  <button ion-button block [navPush]="AddBoozeBtn">Add Booze</button>
 </ion-footer>
