--- a/src/pages/booze/booze.html
+++ b/src/pages/booze/booze.html
@@ -13,7 +13,7 @@
 </p>
 
 <ion-list>
-  <button ion-item *ngFor="let item of types" (click)="typeSelected(type)">
+  <button ion-item *ngFor="let type of types" (click)="typeSelected(type)">
     {{ type }}
   </button>  
 </ion-list>
